# django-cloudistatic

./: LICENSE  README.md  README.rst  instructions.txt  setup.cfg  setup.py
django_cloudistatic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
djangocloudistatic/: apps.py
djangocloudistatic/management/commands/: cloudistatic.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
