[metadata]
name = django-cloudistatic
version = 0.0.1
description = A Django app to serve staticfiles using cloudinary
long_description = file: README.rst
url = https://github.com/djm-1/django-cloudistatic
author = Dibyajyoti Mondal
author_email=dibyajyoti.bhs@gmail.com
license = BSD-3-Clause  
project_urls =
    Documentation = https://django-cloudistatic.readthedocs.io
    Source = https://github.com/djm-1/django-cloudistatic
    Tracker = https://github.com/djm-1/django-cloudistatic/issues

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2  